syntax = "proto3";

package genproto;
option go_package="genproto/auth_service";

service AuthService {
  rpc LoginUser(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string login=1;
  string password=2;
}

message LoginResponse {
  Token token=1;
}

message Token {
  string id=1;
  string created_at=2;
  string updated_at=3;
}
